--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <button class="dropbtn">Ponder ▾</button>
       <div class="dropdown-content">
         <a href="ponder/w01metatagsandcssselectors.html">W01 - Meta Tags & CSS Selectors</a>
-        <a href="ponder/w02something.html">W01 - Another Assignment</a>
+        <a href="ponder/w01jsvariablesandconstants.html">W01 - JS Variables and Constantst</a>
         <a href="ponder/w03something.html">W02 - Another Assignment</a>
       </div>
     </div>
