--- a/index.html
+++ b/index.html
@@ -57,14 +57,23 @@
 <body>
   <nav>
     <a href="index.html">Home</a>
+    
     <div class="dropdown">
       <button class="dropbtn">Ponder ▾</button>
       <div class="dropdown-content">
         <a href="ponder/w01metatagsandcssselectors.html">W01 - Meta Tags & CSS Selectors</a>
-        <a href="ponder/w01jsvariablesandconstants.html">W01 - JS Variables and Constantst</a>
+        <a href="ponder/w01jsvariablesandconstants.html">W01 - JS Variables and Constants</a>
         <a href="ponder/w03something.html">W02 - Another Assignment</a>
+      </div>
+    </div>
+    
+    <div class="dropdown">
+      <button class="dropbtn">Prove ▾</button>
+      <div class="dropdown-content">
+        <a href="prove/missionstatementpart1.html">W01 Prove: Mission Statement part 1</a>
       </div>
     </div>
   </nav>
 </body>
 </html>
+
