--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    
     nav {
-      background: #333;
+      background: palevioletred;
       padding: 10px;
     }
 
@@ -46,7 +47,7 @@
     }
 
     .dropdown-content a:hover {
-      background-color: #ddd;
+      background-color: plum;
     }
 
     .dropdown:hover .dropdown-content {
@@ -55,6 +56,12 @@
   </style>
 </head>
 <body>
+<header><h1>WDD 131 Portfolio</h1></header>
+<main>
+  <p>
+    This is a <span class="funky">portfolio</span> site for the <strong> WDD 131</strong> class at BYU-I
+  </p>
+</main>
   <nav>
     <a href="index.html">Home</a>
     
