--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="dropdown-content">
         <a href="ponder/w01metatagsandcssselectors.html">W01 - Meta Tags & CSS Selectors</a>
         <a href="ponder/w01jsvariablesandconstants.html">W01 - JS Variables and Constants</a>
-        <a href="ponder/w03something.html">W02 - Another Assignment</a>
+        <a href="ponder/dom-basics.html">W02 Ponder: DOM Basics</a>
       </div>
     </div>
     
