add new content for ponder

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <a href="ponder/w01metatagsandcssselectors.html">W01 - Meta Tags & CSS Selectors</a>
         <a href="ponder/w01jsvariablesandconstants.html">W01 - JS Variables and Constants</a>
         <a href="ponder/dom-basics.html">W02 Ponder: DOM Basics</a>
+        <a href="ponder/dom-theme.html">W02 Ponder: Computational Thinking</a>
       </div>
     </div>
     
