--- a/prove/mission/index.html
+++ b/prove/mission/index.html
@@ -7,8 +7,17 @@
     <meta name="author" content="Your Name">
     <title>Mission Statement</title>
     <link rel="stylesheet" href="style.css">
+    <script src="mission.js" defer></script>
 </head>
 <body>
+    <div class="theme-selector-wrapper">
+        <select id="theme-selector">
+            <option value="" selected>Choose Mode</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+        </select>
+    </div>
+
     <div class="border">
         <header>
             <h1 class="main-title">MISSION STATEMENT</h1>
