--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="dropdown">
       <button class="dropbtn">Prove ▾</button>
       <div class="dropdown-content">
-        <a href="prove/mission/index.html">W01 Prove: Mission Statement part 1</a>
+        <a href="prove/mission/index.html">W01 Prove: Mission Statement part 1/2</a>
       </div>
     </div>
   </nav>
