created new html and css for prove assignment

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <a href="ponder/w01jsvariablesandconstants.html">W01 - JS Variables and Constants</a>
         <a href="ponder/dom-basics.html">W02 Ponder: DOM Basics</a>
         <a href="ponder/dom-theme.html">W02 Ponder: Computational Thinking</a>
+        <a href="ponder/media-query.html">W03 Ponder: Responsive Design</a>
       </div>
     </div>
     
