--- a/ponder/media-query.html
+++ b/ponder/media-query.html
@@ -14,13 +14,13 @@
 
   <main>
     <section>
-      <h2>2 Nephi 32:9</h2>
-      <p>But behold, I say unto you that ye must pray always, and not faint; that ye must not perform any thing unto the Lord save in the first place ye shall pray unto the Father in the name of Christ, that he will consecrate thy performance unto thee, that thy performance may be for the welfare of thy soul.</p>
+      <h2> Ether 12:27</h2>
+      <p>And if men come unto me I will show unto them their weakness. I give unto men weakness that they may be humble; and my grace is sufficient for all men that humble themselves before me; for if they humble themselves before me, and have faith in me, then will I make weak things become strong unto them.</p>
     </section>
 
     <section>
-      <h2>Helaman 12:24</h2>
-      <p>And may God grant, in his great fulness, that men might be brought unto repentance and good works, that they might be restored unto grace for grace, according to their works.</p>
+      <h2>1 Nephi 3:7 </h2>
+      <p>And it came to pass that I, Nephi, said unto my father: I will go and do the things which the Lord hath commanded, for I know that the Lord giveth no commandments unto the children of men, save he shall prepare a way for them that they may accomplish the thing which he commandeth them.</p>
     </section>
   </main>
 
