--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a href="ponder/dom-basics.html">W02 Ponder: DOM Basics</a>
         <a href="ponder/dom-theme.html">W02 Ponder: Computational Thinking</a>
         <a href="ponder/media-query.html">W03 Ponder: Responsive Design</a>
-        <a href="ponder/responsive.html">WW04 Ponder: Responsive Menu</a>
+        <a href="ponder/responsive.html">W04 Ponder: Responsive Menu</a>
       </div>
     </div>
     
