created prove modal assignment

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <a href="ponder/dom-theme.html">W02 Ponder: Computational Thinking</a>
         <a href="ponder/media-query.html">W03 Ponder: Responsive Design</a>
         <a href="ponder/responsive.html">W04 Ponder: Responsive Menu</a>
+        <a href="ponder/modal.html">W04 Ponder: Responsive Gallery with Modals</a>
       </div>
     </div>
     
