CREATED THE COOL PICS PART 2

--- a/prove/coolpics/index.html
+++ b/prove/coolpics/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="A responsive photography gallery called CoolPics.">
-  <meta name="author" content="Angelique Legaspi">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CoolPics Gallery</title>
-
-
-  <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
-
- 
-  <link rel="stylesheet" href="coolpics.css">
+  <link rel="stylesheet" href="coolpics.css" />
 </head>
 <body>
   <header>
     <h1>Cool Pics 📷</h1>
-    <button id="menu-btn" aria-expanded="false" aria-controls="nav-links">Menu</button>
-    <nav>
-      <ul id="nav-links">
+
+    <button id="menu-btn"
+            aria-expanded="false"
+            aria-controls="nav-links"
+            aria-label="Toggle navigation">
+      Menu
+    </button>
+
+    <nav aria-label="Main">
+      <ul id="nav-links" class="hide">
         <li><a href="#">Home</a></li>
         <li><a href="#">People</a></li>
         <li><a href="#">Places</a></li>
@@ -30,16 +30,17 @@
 
   <main>
     <h2>Current Work</h2>
+
     <section class="gallery">
-      <figure><img src="norris-sm.jpeg" alt="Norris smiling"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris casual pose"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris outdoors"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris portrait"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris action shot"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris candid"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris black and white"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris close-up"></figure>
-      <figure><img src="norris-sm.jpeg" alt="Norris artistic"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 1"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 2"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 3"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 4"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 5"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 6"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 7"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 8"></figure>
+      <figure><img src="norris-sm.jpeg" alt="Norris 9"></figure>
     </section>
   </main>
 
