--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <button class="dropbtn">Prove ▾</button>
       <div class="dropdown-content">
         <a href="prove/mission/index.html">W01 Prove: Mission Statement part 1/2</a>
-        <a href="prove/coolpics/index.html">W03 Prove: Cool Pics part 1</a>
+        <a href="prove/coolpics/index.html">W03 Prove: Cool Pics part 1/2</a>
       </div>
     </div>
   </nav>
