--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <a href="ponder/media-query.html">W03 Ponder: Responsive Design</a>
         <a href="ponder/responsive.html">W04 Ponder: Responsive Menu</a>
         <a href="ponder/modal.html">W04 Ponder: Responsive Gallery with Modals</a>
+        <a href="ponder/movie.html">W05 Ponder: Accessibility and Design</a>
       </div>
     </div>
     
