--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
         <a href="ponder/responsive.html">W04 Ponder: Responsive Menu</a>
         <a href="ponder/modal.html">W04 Ponder: Responsive Gallery with Modals</a>
         <a href="ponder/movie.html">W05 Ponder: Accessibility and Design</a>
+        <a href="ponder/arrays.html">W06 Ponder: Array Methods</a>
+        <a href="ponder/movies.html">W06 Ponder: Dynamic Content</a>
       </div>
     </div>
     
