updated blog to part 2

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="dropdown-content">
         <a href="prove/mission/index.html">W01 Prove: Mission Statement part 1/2</a>
         <a href="prove/coolpics/index.html">W03 Prove: Cool Pics part 1/2</a>
-        <a href="prove/blog/index.html">W05 Prove: Build a Blog part 1</a>
+        <a href="prove/blog/index.html">W05 Prove: Build a Blog part 1/2</a>
       </div>
     </div>
   </nav>
