--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <a href="ponder/movie.html">W05 Ponder: Accessibility and Design</a>
         <a href="ponder/arrays.html">W06 Ponder: Array Methods</a>
         <a href="ponder/movies.html">W06 Ponder: Dynamic Content</a>
+        <a href="ponder/form/form-demo.html">W07 Ponder: Working with Forms</a>
         
       </div>
     </div>
