CREATED CARD ASSIGNMENT

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <a href="prove/mission/index.html">W01 Prove: Mission Statement part 1/2</a>
         <a href="prove/coolpics/index.html">W03 Prove: Cool Pics part 1/2</a>
         <a href="prove/blog/index.html">W05 Prove: Build a Blog part 1/2</a>
+        <a href="prove/creditcard/index.html">Week 7	Prove: Credit Card Form</a>
       </div>
     </div>
   </nav>
