--- a/prove/creditcard/index.html
+++ b/prove/creditcard/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <form id="cc-form">
+  <form id="cc-form" method="post" action="#">
     <section class="card-front" aria-label="Card front">
       <div class="total">TOTAL: $199</div>
       <img
