created the ponder course

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <a href="ponder/arrays.html">W06 Ponder: Array Methods</a>
         <a href="ponder/movies.html">W06 Ponder: Dynamic Content</a>
         <a href="ponder/form/form-demo.html">W07 Ponder: Working with Forms</a>
+        <a href="ponder/courses.html">W08 Ponder: JS Objects</a>
         
       </div>
     </div>
