--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <a href="prove/coolpics/index.html">W03 Prove: Cool Pics part 1/2</a>
         <a href="prove/blog/index.html">W05 Prove: Build a Blog part 1/2</a>
         <a href="prove/creditcard/index.html">Week 7	Prove: Credit Card Form</a>
+        <a href="prove/charactercard/index.html">Week 8	Prove: Character Card</a>
       </div>
     </div>
   </nav>
