--- a/prove/charactercard/index.html
+++ b/prove/charactercard/index.html
@@ -8,16 +8,18 @@
   <link rel="stylesheet" href="charactercard.css" />
   <script src="charactercard.js" defer></script>
 
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Anjelis Vega – Celestial Vanguard">
-  <meta property="og:description" content="Meet Anjelis Vega, a brave modern hero who channels radiant energy to protect her city.">
-  <meta property="og:url" content="https://angelique213.github.io/wdd131/charactercard/">
-  <meta property="og:image" content="https://angelique213.github.io/wdd131/charactercard/character.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Anjelis Vega – Celestial Vanguard">
+<meta property="og:description" content="Meet Anjelis Vega, a brave modern hero who channels radiant energy to protect her city.">
+<meta property="og:url" content="https://angelique213.github.io/wdd131/prove/charactercard/">
+<meta property="og:image" content="https://angelique213.github.io/wdd131/prove/charactercard/character.png">
 
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Anjelis Vega – Celestial Vanguard">
-  <meta name="twitter:description" content="Meet Anjelis Vega, a brave modern hero who channels radiant energy to protect her city.">
-  <meta name="twitter:image" content="https://angelique213.github.io/wdd131/charactercard/character.png">
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Anjelis Vega – Celestial Vanguard">
+<meta name="twitter:description" content="Meet Anjelis Vega, a brave modern hero who channels radiant energy to protect her city.">
+<meta name="twitter:image" content="https://angelique213.github.io/wdd131/prove/charactercard/character.png">
 
   <link rel="icon" href="favicon.jpg" type="image/jpeg">
 </head>
