--- a/prove/recipes/index.html
+++ b/prove/recipes/index.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Recipe Book • WDD131</title>
-  <meta name="description" content="Search simple, tasty recipes. Mobile-first, accessible, and fast.">
-  <meta name="author" content="YOUR NAME">
+
+  <meta name="description" content="Search and explore easy, delicious recipes on any device.">
+  <meta name="author" content="Angelique Legaspi">
   <link rel="icon" href="./images/recipe-book.png">
 
-  <!-- Social sharing -->
   <meta property="og:title" content="Recipe Book • WDD131">
   <meta property="og:type" content="website">
-  <meta property="og:description" content="Search simple, tasty recipes. Mobile-first, accessible, and fast.">
+  <meta property="og:description" content="Search and explore easy, delicious recipes on any device.">
   <meta property="og:image" content="https://angelique213.github.io/wdd131/recipes/images/apple-crisp.jpg">
   <meta property="og:url" content="https://angelique213.github.io/wdd131/recipes/">
   <meta name="twitter:card" content="summary_large_image">
@@ -26,8 +26,8 @@
       <h1>RecipeBook</h1>
     </div>
 
-    <form id="searchForm" class="search" role="search" aria-label="Find a recipe">
-      <label class="vh" for="q">Find a recipe</label>
+    <form id="searchForm" class="search" role="search" aria-label="Search recipes">
+      <label class="vh" for="q">Search recipes</label>
       <input id="q" name="q" type="search" placeholder="Find a recipe" autocomplete="off">
       <button type="submit" aria-label="Search">
         <img src="./images/search.svg" alt="" width="22" height="22" aria-hidden="true">
@@ -43,17 +43,24 @@
 
   <footer class="site-footer">
     <div class="social">
-      <a href="#" aria-label="Instagram"><img src="./images/instagram_icon.svg" alt="instagram icon"></a>
-      <a href="#" aria-label="YouTube"><img src="./images/youtube_icon.svg" alt="youtube icon"></a>
-      <a href="#" aria-label="Pinterest"><img src="./images/pinterest_icon.svg" alt="pinterest icon"></a>
+      <a href="https://instagram.com" aria-label="Instagram">
+        <img src="./images/instagram_icon.svg" alt="instagram icon" width="48" height="48">
+      </a>
+      <a href="https://youtube.com" aria-label="YouTube">
+        <img src="./images/youtube_icon.svg" alt="youtube icon" width="48" height="48">
+      </a>
+      <a href="https://pinterest.com" aria-label="Pinterest">
+        <img src="./images/pinterest_icon.svg" alt="pinterest icon" width="48" height="48">
+      </a>
     </div>
 
     <p class="tiny">
-      <a href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">Recipe icons created by Freepik - Flaticon</a>
+      <a href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">
+        Recipe icons created by Freepik - Flaticon
+      </a>
     </p>
 
     <p class="copyright">©2023</p>
   </footer>
 </body>
 </html>
-
