--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <a href="ponder/form/form-demo.html">W07 Ponder: Working with Forms</a>
         <a href="ponder/courses.html">W08 Ponder: JS Objects</a>
         <a href="ponder/flexbox.html">W09 Ponder: Flexbox exercises</a>
+        <a href="ponder/sorting.html">W10 Ponder: Sorting and Filtering</a>
         
       </div>
     </div>
