--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <a href="prove/blog/index.html">W05 Prove: Build a Blog part 1/2</a>
         <a href="prove/creditcard/index.html">Week 7	Prove: Credit Card Form</a>
         <a href="prove/charactercard/index.html">Week 8	Prove: Character Card</a>
-        <a href="prove/recipes/index.html">Week 9	Prove: Recipe Book part 1</a>
+        <a href="prove/recipes/index.html">Week 9	Prove: Recipe Book part 1/2</a>
       </div>
     </div>
   </nav>
