--- a/scripture-generator/site-plan.html
+++ b/scripture-generator/site-plan.html
@@ -10,28 +10,27 @@
 <body>
   <header>
     <h1>Souls – Scripture Generator</h1>
-    <h2>Site Plan</h2>
-    <p>WDD 131 | Angelique Legaspi</p>
+    <p>Angelique Legaspi</p>
+    <p>WDD 131</p>
   </header>
 
   <main>
+    <!-- OVERVIEW -->
     <section>
-      <h2>Site Name</h2>
-      <p><strong>Souls</strong></p>
-      <p>A simple, peaceful scripture generator that helps users find uplifting verses for their soul.</p>
-    </section>
+      <h2>Overview</h2>
 
-    <section>
-      <h2>Purpose</h2>
+      <h3>Site Name</h3>
+      <p><strong>Souls</strong></p>
+      <p>A simple, peaceful scripture generator that helps users find uplifting verses or chapters for their soul.</p>
+
+      <h3>Purpose</h3>
       <p>
         The purpose of <strong>Souls</strong> is to provide uplifting scripture passages that offer peace, guidance,
-        and spiritual strength. The site will let users generate random verses or select a book and chapter to quickly
+        and spiritual strength. The site will let users generate random verses or chapters and select a book to quickly
         find meaningful scripture to study or share.
       </p>
-    </section>
 
-    <section>
-      <h2>Audience</h2>
+      <h3>Audience</h3>
       <p>
         The intended audience includes individuals seeking daily spiritual inspiration, students who want a simple
         scripture reference tool, and anyone looking for peace and light in God’s word. The design will be calm,
@@ -39,6 +38,7 @@
       </p>
     </section>
 
+    <!-- DYNAMIC ELEMENTS -->
     <section>
       <h2>Dynamic Elements (JavaScript)</h2>
       <p>
@@ -46,9 +46,10 @@
         Users will be able to:
       </p>
       <ul>
-        <li>Click a button to receive a random scripture verse.</li>
-        <li>Select a book and chapter to generate a verse from that location.</li>
-        <li>See the DOM update as verses, references, and messages change based on their choices.</li>
+        <li>Click a button to receive a random scripture verse or chapter.</li>
+        <li>Select whether to generate a chapter or a verse.</li>
+        <li>Select a book to generate a verse or chapter.</li>
+        <li>Save verses to a personal journal and write notes about them.</li>
       </ul>
       <p>
         The project will use <strong>objects</strong> to represent verses and scripture data, <strong>arrays</strong> to store
@@ -60,21 +61,22 @@
       </p>
     </section>
 
+    <!-- BRANDING -->
     <section>
-      <h2>Logo</h2>
+      <h2>Branding</h2>
+
+      <h3>Website Logo</h3>
       <p>
-        The logo represents a figure walking toward light and mountains, symbolizing the journey of the soul toward
+        The logo represents Jesus Christ walking toward light and mountains, symbolizing the journey of the soul toward
         truth and peace.
       </p>
       <div class="logo-wrapper">
         <img src="soulslogo.png" alt="Souls scripture logo">
-        <p class="logo-caption">Souls Logo – figure walking toward light and mountains.</p>
       </div>
-      <p><em>(Update the image path and filename to match where you save your logo.)</em></p>
-    </section>
 
-    <section>
-      <h2>Color Palette</h2>
+      <h3>Style Guide</h3>
+
+      <h4>Color Palette</h4>
       <p>
         The color palette is inspired by deep, peaceful blues and soft light tones to create a calm and spiritual atmosphere.
       </p>
@@ -105,10 +107,8 @@
           <small>Sky Light Blue (buttons)</small>
         </div>
       </div>
-    </section>
 
-    <section>
-      <h2>Typography</h2>
+      <h4>Typography</h4>
       <p>
         <strong>Heading Font:</strong> Cinzel – used for the logo, main title, and section headings to give a classic,
         sacred feeling.
@@ -117,70 +117,77 @@
         <strong>Body Font:</strong> Inter – used for all body text to keep the content clean, modern, and easy to read.
       </p>
       <div class="typography-demo">
-        <h3>Heading Example</h3>
+        <h5>Heading Example</h5>
         <p class="heading-sample">SOULS – Words that lift the soul.</p>
 
-        <h3>Body Text Example</h3>
+        <h5>Body Text Example</h5>
         <p class="body-sample">
           This site helps users find uplifting scriptures through a simple verse generator and a chapter-based scripture finder.
         </p>
       </div>
     </section>
 
+    <!-- NAVIGATION -->
+    <section>
+      <h2>Navigation</h2>
+      <p>The main navigation will include the following links:</p>
+      <ul>
+        <li>Home</li>
+        <li>Journal</li>
+      </ul>
+    </section>
+
+    <!-- CONTENT -->
     <section>
       <h2>Content</h2>
 
-      <h3>Home Page – Souls</h3>
+      <h3>Home Page</h3>
       <p>
         The home page will introduce the Souls scripture generator in a simple and calming layout. A hero section will
         display the logo, the title “Souls,” and a short tagline such as “Words that lift the soul.” Below the hero
         section, a main card will invite the user to generate a scripture. When the user clicks the button, a random
-        verse and its reference will appear in the card. The focus of the home page is to give users immediate access
-        to inspiration with minimal distractions.
+        scripture verse and its reference will appear in the card.
+      </p>
+      <p>
+        The home page will also include simple controls that allow users to select a book and choose whether they want
+        a verse or a chapter. After they click the button, the result card will display the scripture, the reference,
+        and optional actions such as copy and “Add to favorites.” The focus of the home page is to give users immediate
+        access to inspiration with minimal distractions.
       </p>
 
-      <h3>Generator Page – Scripture Finder</h3>
+      <h3>Journal Page</h3>
       <p>
-        The generator page will function more like a tool. It will allow users to select a book and chapter from
-        dropdown menus and then click a button to receive a verse from that chapter. A result card will display the
-        verse, the reference, and optional actions such as copying the verse. This page will help users who want
-        scripture from a specific part of the Bible or another selected volume of scripture.
+        The Journal page will allow users to view the scripture verses or chapters they have saved and write personal
+        notes or reflections about each one. Each saved scripture will appear in a card with the verse text, reference,
+        and a text area or input for journaling. Users will be able to edit or update their notes so they can record
+        impressions from their scripture study over time.
       </p>
 
       <h3>Additional Text / Labels</h3>
       <ul>
         <li>“Generate Scripture” – main button on the home page.</li>
         <li>“Click the button to receive a scripture.” – default message in the verse card.</li>
-        <li>“Choose a book and chapter to receive a verse.” – instructions on the generator page.</li>
-        <li>“For God so loved the world…” – example verse for layout and testing.</li>
+        <li>“Choose a book and type to receive a verse or chapter.” – instructions on the home page controls.</li>
+        <li>“Saved Scriptures & Journal” – heading on the Journal page.</li>
         <li>Footer text: “© 2025 Souls — Guided by Scripture”</li>
       </ul>
     </section>
 
+    <!-- WIREFRAMES -->
     <section>
       <h2>Wireframes</h2>
 
       <h3>Home Page Wireframe</h3>
-      <p>
-        The home page wireframe features a header with the logo and navigation, a large hero section with the Souls
-        title and a “Generate Scripture” button, and a centered card below where the verse appears. The footer runs
-        across the bottom with a simple copyright line.
-      </p>
+      <p>Home page showing the hero area, generator card, and simple controls for book and verse/chapter.</p>
       <div class="wireframe-wrapper">
-        <img src="images/wireframe-home-souls.jpg" alt="Home page wireframe for Souls scripture generator">
+        <img src="wireframe2.jpg" alt="Home page wireframe for Souls scripture generator">
       </div>
 
-      <h3>Generator Page Wireframe</h3>
-      <p>
-        The generator page wireframe shows the same header and footer for consistency. The main content includes a
-        short description, two dropdowns (book and chapter), a “Get Verse” button, and a result card that displays the
-        verse text and reference. The layout is focused on clarity and ease of use.
-      </p>
+      <h3>Journal Page Wireframe</h3>
+      <p>Journal page showing a list of saved scriptures with space for user notes or reflections.</p>
       <div class="wireframe-wrapper">
-        <img src="images/wireframe-generator-souls.jpg" alt="Generator page wireframe for Souls scripture finder">
+        <img src="wireframe1.jpg" alt="Journal page wireframe for Souls scripture journal">
       </div>
-
-      <p><em>(Replace the image filenames and paths with your actual wireframe image files.)</em></p>
     </section>
   </main>
 
