--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
         <a href="prove/recipes/index.html">Week 9	Prove: Recipe Book part 1/2</a>
       </div>
     </div>
+
+      <div class="dropdown">
+        <button class="dropbtn">Site-Plan ▾</button>
+        <div class="dropdown-content">
+          <a href="scripture-generator/site-plan.html">Project Site Plan</a>
+        </div>
+      </div>
+    </div>
   </nav>
 </body>
 </html>
